--- a/AUS_NZ_Analysis.ipynb
+++ b/AUS_NZ_Analysis.ipynb
@@ -1574,7 +1574,7 @@
    "id": "0feb0e01",
    "metadata": {},
    "source": [
-    "The total cost of the comparable roles is AUD 4,963,305 in Australia and AUD 6,572,330 in New Zealand. This means that shifting all positions to New Zealand would increase costs by approximately AUD 1,609,025 (or NZD 1,764,457), representing a 32.4% higher cost compared to Australia. \n",
+    "The total cost of the comparable roles is AUD 4,963,305 in Australia and AUD 6,572,330 in New Zealand. This means that shifting all positions to New Zealand would increase costs by approximately AUD 1,609,025 (or NZD 1,764,457), **representing a 32.4% higher cost compared to Australia**. \n",
     "\n",
     "In other words, **New Zealand roles are significantly more expensive when converted to AUD**."
    ]
@@ -1788,11 +1788,11 @@
    "source": [
     "NZ gross pays are significantly higher than AU gross pays in the dataset. NZ employees earn higher gross pay (AUD-converted) than AU employees.\n",
     "\n",
-    "The negative t-statistic confirms this (AU_mean − NZ_mean is negative).\n",
+    "- The negative t-statistic confirms this (AU_mean − NZ_mean is negative).\n",
     "\n",
-    "There is a difference, and it's very large and statistically strong.\n",
+    "- There is a difference, and it's very large and statistically strong.\n",
     "\n",
-    "The hypothesis of equal gross pay is rejected. NZ gross pay is significantly higher than AU gross pay."
+    "- The hypothesis of equal gross pay is rejected. NZ gross pay is significantly higher than AU gross pay."
    ]
   },
   {
