--- a/AUS_NZ_Analysis.ipynb
+++ b/AUS_NZ_Analysis.ipynb
@@ -1974,13 +1974,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 423,
    "id": "5e5ae6bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save final table to CSV\n",
-    "final_table.to_csv(\"final_output.csv\", index=False)"
+    "final_table[['pay1_ird_number', 'pay2_employee_number', 'AU_gross_aud', 'AU_calculated_net', 'pay2_net','NZ_gross_aud', 'NZ_calculated_net', 'pay1_net', 'used?', 'reason_not_used']].to_csv(\"final_output.csv\", index=False)"
    ]
   },
   {
