--- a/AUS_NZ_Analysis.ipynb
+++ b/AUS_NZ_Analysis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 2,
    "id": "4c7dcc25",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 3,
    "id": "6e5a15aa",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 4,
    "id": "ef6dbb46",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 5,
    "id": "8d27ade9",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 6,
    "id": "07854f35",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "4   25815.09              3271.87          3.963562e+13                    3.0  "
       ]
      },
-     "execution_count": 382,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 7,
    "id": "d8720531",
    "metadata": {},
    "outputs": [
@@ -409,8 +409,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "941a9cad",
+   "metadata": {},
+   "source": [
+    "There is no nulls in the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 8,
    "id": "11d811da",
    "metadata": {},
    "outputs": [
@@ -616,7 +624,7 @@
        "max            9.220712e+13              29.000000  "
       ]
      },
-     "execution_count": 384,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 9,
    "id": "5cd3e86c",
    "metadata": {},
    "outputs": [
@@ -671,16 +679,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "386dadf4",
-   "metadata": {},
-   "source": [
-    "It seems like there are not any outliers detected."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 10,
    "id": "186ab3bb",
    "metadata": {},
    "outputs": [],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 11,
    "id": "bfbc3c86",
    "metadata": {},
    "outputs": [],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 12,
    "id": "e16297f5",
    "metadata": {},
    "outputs": [],
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 13,
    "id": "dacd1c36",
    "metadata": {},
    "outputs": [
@@ -847,13 +847,21 @@
        "4        120112821       True"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data[['pay1_ird_number','valid_ird']].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0a8c162",
+   "metadata": {},
+   "source": [
+    "Result from the IRD validator shows that there is only 1 record with wrong IRD number format. This row therefore will be deleted later."
    ]
   },
   {
@@ -868,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 14,
    "id": "7600e0cd",
    "metadata": {},
    "outputs": [],
@@ -885,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 15,
    "id": "cb3fba75",
    "metadata": {},
    "outputs": [
@@ -980,7 +988,7 @@
        "41                    1.0       True  "
       ]
      },
-     "execution_count": 391,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 16,
    "id": "d626e7e4",
    "metadata": {},
    "outputs": [],
@@ -1029,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 17,
    "id": "7119eed7",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1192,7 @@
        "5       True  "
       ]
      },
-     "execution_count": 393,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "68c1bd8a",
    "metadata": {},
    "outputs": [],
@@ -1259,37 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
-   "id": "72ee4864",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_net_australia(gross):\n",
-    "    \"\"\"\n",
-    "    Returns net income after applying AU resident tax 2024–25.\n",
-    "    Medicare levy NOT included (assignment requirement).\n",
-    "    \"\"\"\n",
-    "    income = gross\n",
-    "    tax = 0.0\n",
-    "\n",
-    "    if income <= 18200:\n",
-    "        tax = 0\n",
-    "    elif income <= 45000:\n",
-    "        tax = (income - 18200) * 0.16\n",
-    "    elif income <= 135000:\n",
-    "        tax = 4288 + (income - 45000) * 0.30\n",
-    "    elif income <= 190000:\n",
-    "        tax = 31288 + (income - 135000) * 0.37\n",
-    "    else:\n",
-    "        tax = 51638 + (income - 190000) * 0.45\n",
-    "\n",
-    "    net = income - tax\n",
-    "    return net"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 19,
    "id": "603b1201",
    "metadata": {},
    "outputs": [],
@@ -1363,11 +1341,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "72ee4864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_net_australia(gross):\n",
+    "    \"\"\"\n",
+    "    Returns net income after applying AU resident tax 2024–25.\n",
+    "    Medicare levy NOT included (assignment requirement).\n",
+    "    \"\"\"\n",
+    "    income = gross\n",
+    "    tax = 0.0\n",
+    "\n",
+    "    if income <= 18200:\n",
+    "        tax = 0\n",
+    "    elif income <= 45000:\n",
+    "        tax = (income - 18200) * 0.16\n",
+    "    elif income <= 135000:\n",
+    "        tax = 4288 + (income - 45000) * 0.30\n",
+    "    elif income <= 190000:\n",
+    "        tax = 31288 + (income - 135000) * 0.37\n",
+    "    else:\n",
+    "        tax = 51638 + (income - 190000) * 0.45\n",
+    "\n",
+    "    net = income - tax\n",
+    "    return net"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c713d239",
    "metadata": {},
    "source": [
-    "Check the documents below to see more information about how to calculate tax in both countries:\n",
+    "**Check the documents below to see more information about how to calculate tax in both countries:**\n",
     "\n",
     "[Australia tax information](https://www.ato.gov.au/tax-rates-and-codes/tax-rates-australian-residents)\n",
     "\n",
@@ -1386,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a81eb395",
    "metadata": {},
    "outputs": [],
@@ -1403,12 +1411,12 @@
    "source": [
     "Australia’s net pay does not include government levies, whereas New Zealand’s net pay does. As a result, the NZ calculated net will not match the provided net in the dataset unless we adjust for levies (KiwiSaver + ACC Levy).\n",
     "\n",
-    "Referring back to the requirement — “*Do not remove rows if government levies are not included in net calculation*” — we will therefore use only the Australian calculated net compared with the Australian provided net to check for data validity (The difference should be within a dollar to be considered valid)."
+    "We will therefore use only the Australian calculated net compared with the Australian provided net to check for data validity (The difference should be within a dollar to be considered valid)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f89450c2",
    "metadata": {},
    "outputs": [],
@@ -1419,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9de305a1",
    "metadata": {},
    "outputs": [
@@ -1477,7 +1485,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 399,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 24,
    "id": "3b671546",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "9c69abb9",
    "metadata": {},
    "outputs": [
@@ -1574,7 +1582,7 @@
    "id": "0feb0e01",
    "metadata": {},
    "source": [
-    "The total cost of the comparable roles is AUD 4,963,305 in Australia and AUD 6,572,330 in New Zealand. This means that shifting all positions to New Zealand would increase costs by approximately AUD 1,609,025 (or NZD 1,764,457), **representing a 32.4% higher cost compared to Australia**. \n",
+    "The total cost of the comparable roles is **AUD 4,963,305 in Australia and AUD 6,572,330 in New Zealand**. This means that shifting all positions to New Zealand would increase costs by approximately AUD 1,609,025 (or NZD 1,764,457), **representing a 32.4% higher cost compared to Australia**. \n",
     "\n",
     "In other words, **New Zealand roles are significantly more expensive when converted to AUD**."
    ]
@@ -1591,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "dc8c9704",
    "metadata": {},
    "outputs": [],
@@ -1602,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "df304486",
    "metadata": {},
    "outputs": [],
@@ -1613,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "18840e85",
    "metadata": {},
    "outputs": [
@@ -1648,8 +1656,7 @@
        "      <th>pay2_shift_loading</th>\n",
        "      <th>pay2_net</th>\n",
        "      <th>pay2_superannuation</th>\n",
-       "      <th>pay2_employee_number</th>\n",
-       "      <th>pay2_future_positions</th>\n",
+       "      <th>...</th>\n",
        "      <th>valid_ird</th>\n",
        "      <th>NZ_gross_nzd</th>\n",
        "      <th>AU_gross_aud</th>\n",
@@ -1665,15 +1672,18 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>0 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
        "Columns: [pay1_base_pay, pay1_shift_loading, pay1_net, pay1_kiwi_saver_employee, pay1_ird_number, pay1_future_positions, pay2_base_pay, pay2_shift_loading, pay2_net, pay2_superannuation, pay2_employee_number, pay2_future_positions, valid_ird, NZ_gross_nzd, AU_gross_aud, NZ_cost_total_nzd, AU_cost_total_aud, AU_calculated_net, NZ_calculated_net, AU_difference_net, NZ_gross_aud, difference_gross_btw_au_nz_aud]\n",
-       "Index: []"
+       "Index: []\n",
+       "\n",
+       "[0 rows x 22 columns]"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 29,
    "id": "5129c053",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 31,
    "id": "6a720632",
    "metadata": {},
    "outputs": [
@@ -1818,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "d904346f",
    "metadata": {},
    "outputs": [],
@@ -1826,7 +1836,7 @@
     "final_table = data.merge(clean_data, how='left') # Merge the uncleaned data to get all rows \n",
     "\n",
     "# Create a column to identify duplicates\n",
-    "final_table['duplicated'] = final_table.duplicated(subset=['pay1_ird_number', 'pay2_employee_number'], keep=False) \n",
+    "final_table['duplicated'] = final_table.duplicated(subset=['pay1_ird_number', 'pay2_employee_number']) \n",
     "\n",
     "\n",
     "# Create a column to indicate if the row is used in the clean dataset. A row is used if it has a valid IRD and is not a duplicate.\n",
@@ -1835,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "5441be6d",
    "metadata": {},
    "outputs": [],
@@ -1865,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 42,
    "id": "3bef6e78",
    "metadata": {},
    "outputs": [
@@ -1917,19 +1927,6 @@
        "      <td>Invalid IRD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>51148169</td>\n",
-       "      <td>29764817766792</td>\n",
-       "      <td>563163.61</td>\n",
-       "      <td>343601.9855</td>\n",
-       "      <td>343601.98</td>\n",
-       "      <td>770443.707824</td>\n",
-       "      <td>535947.3177</td>\n",
-       "      <td>510601.26</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Duplicated</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>41</th>\n",
        "      <td>51148169</td>\n",
        "      <td>29764817766792</td>\n",
@@ -1949,21 +1946,18 @@
       "text/plain": [
        "   pay1_ird_number pay2_employee_number  AU_gross_aud  AU_calculated_net  \\\n",
        "39        52148169       29764817766792           NaN                NaN   \n",
-       "40        51148169       29764817766792     563163.61        343601.9855   \n",
        "41        51148169       29764817766792     563163.61        343601.9855   \n",
        "\n",
        "     pay2_net   NZ_gross_aud  NZ_calculated_net   pay1_net  used?  \\\n",
        "39  343601.98            NaN                NaN  510601.26  False   \n",
-       "40  343601.98  770443.707824        535947.3177  510601.26  False   \n",
        "41  343601.98  770443.707824        535947.3177  510601.26  False   \n",
        "\n",
        "   reason_not_used  \n",
        "39     Invalid IRD  \n",
-       "40      Duplicated  \n",
        "41      Duplicated  "
       ]
      },
-     "execution_count": 413,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1974,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 43,
    "id": "5e5ae6bf",
    "metadata": {},
    "outputs": [],
