--- a/AUS_NZ_Analysis.ipynb
+++ b/AUS_NZ_Analysis.ipynb
@@ -699,7 +699,7 @@
     "\n",
     "The IRD (Inland Revenue Department) number is the unique identifier for employees in New Zealand. This analysis implements the official IRD validation algorithm, which employs dual-stage weighting mechanisms to verify number authenticity. Only rows with valid IRD numbers are retained for analysis.\n",
     "\n",
-    "[Check here for a reference of how the Algorithm works](https://github.com/jarden-digital/nz-ird-validator?tab=readme-ov-file)"
+    "[Check **here** for a reference of how the Algorithm works](https://github.com/jarden-digital/nz-ird-validator?tab=readme-ov-file)"
    ]
   },
   {
@@ -1217,10 +1217,15 @@
     "**Exchange Rate:** 1 AUD = 1.0966 NZD (RBA averaged daily rate for year ending 30 June 2025) ([Click here for more information](https://www.ato.gov.au/tax-rates-and-codes/foreign-exchange-rates-annual-2025-financial-year))\n",
     "\n",
     "**Calculations:**\n",
+    "\n",
     "- NZ Gross (NZD) = Base Pay + Shift Loading\n",
+    "\n",
     "- AU Gross (AUD) = Base Pay + Shift Loading\n",
+    "\n",
     "- Total NZ Cost (NZD) = NZ Gross × Future Positions\n",
+    "\n",
     "- Total AU Cost (AUD) = AU Gross × Future Positions\n",
+    "\n",
     "- Converted NZ Cost (AUD) = Total NZ Cost × (1 / 1.0966)\n",
     "\n",
     "NOTE that the Gross is calculated WITHOUT employer contributions (Kiwi Saver & SG) "
@@ -1254,10 +1259,15 @@
     "Net income is calculated by applying the Australian resident income tax rates. The Medicare Levy is excluded per assignment requirements as government levies should not affect data validation decisions.\n",
     "\n",
     "Tax Brackets (2024-25):\n",
+    "\n",
     "- $0–$18,200: Tax-free threshold\n",
+    "\n",
     "- $18,201–$45,000: 16% of income above threshold\n",
+    "\n",
     "- $45,001–$135,000: $4,288 + 30% of income above $45,000\n",
+    "\n",
     "- $135,001–$190,000: $31,288 + 37% of income above $135,000\n",
+    "\n",
     "- $190,001+: $51,638 + 45% of income above $190,000\n",
     "\n",
     "**New Zealand Tax Calculation (1 April 2024 – 31 March 2025):**\n",
